<resources>
    <string name="app_name">Welcome</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_skip">Scip</string>
    <string name="item_title">Title</string>
    <string name="item_des">Description</string>
    <string name="item_back">Back</string>
    <string name="item_next">Let/s go </string>
    <string name="item_help">Swipe to know more, or if know press to skip button </string>
    <string name="profile">Profile screen </string>
    <string name="note">Note</string>
    <string name="contact">Contact</string>
    <string name="date">Date</string>
    <string name="add_note">Add title...</string>
    <string name="add_des">Add description...</string>
    <string name="add_photo">Add photo</string>
    <string name="save">Save</string>
    <string name="contacts">Your contacts</string>
    <string name="name">Name:</string>
    <string name="phone">Phone number:</string>
    <string name="read_contacts">Read contact</string>
    <string name="notes">Your notes</string>
    <string name="surname">Surname:</string>
    <string name="married">Married:</string>
    <string name="title1">Add note</string>
    <string name="title2">Your notes</string>
    <string name="reg">Registration</string>
    <string name="age">Age:</string>
    <string name="log">Login</string>

</resources>