<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.airbnb.lottie.LottieAnimationView
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_margin="20dp"
        android:id="@+id/item_lt_board"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toTopOf="@+id/item_tv_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:fontFamily="@font/adamina"
        android:text="@string/item_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/item_tv_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_lt_board" />

    <TextView
        app:layout_constraintBottom_toTopOf="@id/item_btn_back"
        android:layout_marginBottom="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/item_tv_des"
        android:text="@string/item_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:backgroundTint="@color/black"
        android:padding="12dp"
        app:cornerRadius="12dp"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_btn_back"
        android:id="@+id/item_btn_next"
        android:textAllCaps="false"
        android:text="@string/item_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:textColor="@color/grey"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        android:layout_marginVertical="15dp"
        app:layout_constraintEnd_toStartOf="@id/item_btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/item_btn_back"
        android:textAllCaps="false"
        android:text="@string/item_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton

        android:textStyle="bold"
        android:textColor="@color/grey"
        android:backgroundTint="@color/white"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/item_btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_skip"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>