<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:elevation="8sp"
    android:background="@color/dark_grey2"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="35dp"
            android:src="@drawable/ic_addd_photo"
            android:id="@+id/item_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/item_tv_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/item_des"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/item_img"
            app:layout_constraintTop_toBottomOf="@+id/item_tv_note" />

        <TextView

            android:id="@+id/item_tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginStart="187dp"

            android:fontFamily="@font/adamina"
            android:gravity="center"
            android:text="@string/note"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/item_img"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/item_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@color/dark_grey"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>