<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.userwithfirebase.UserFireBaseFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
        
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collab_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/black"
            app:expandedTitleMarginBottom="20dp"
            app:expandedTitleMarginStart="15dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            
            <com.airbnb.lottie.LottieAnimationView
                app:layout_collapseMode="parallax"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:id="@+id/animation"/>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_title"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetEndWithActions="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="10dp"
                android:text="@string/reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/name_user_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_et"
                android:hint="@string/name"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/surname_user_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_et"
                android:hint="@string/surname"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:inputType="number"
                android:id="@+id/age_user_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_et"
                android:hint="@string/age"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                 />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/reg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="34dp"
                android:text="@string/log"
                android:textAllCaps="false"
                android:minHeight="48dp"
                android:padding="12dp"
                app:cornerRadius="10dp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout>